--- a/backend/openapi_codegen/build.gradle
+++ b/backend/openapi_codegen/build.gradle
@@ -8,7 +8,9 @@ def rootDirToGenerate = "$projectDir/../".toString()
 /**
  * https://github.com/OpenAPITools/openapi-generator/tree/master/modules/openapi-generator-gradle-plugin
  */
-task generateCode(type: org.openapitools.generator.gradle.plugin.tasks.GenerateTask, dependsOn: 'clean') {
+task generateCode(type: org.openapitools.generator.gradle.plugin.tasks.GenerateTask, dependsOn: 'cleanOldClasses') {
+    group = "openapi tools"
+
     generatorName = "spring"
     inputSpec = "$rootDirToGenerate/../api/depSchedule.yml".toString()
     outputDir = rootDirToGenerate
@@ -41,11 +43,10 @@ task generateCode(type: org.openapitools.generator.gradle.plugin.tasks.GenerateT
     }
 }
 
-tasks.register("clean") {
-group = "openapi tools"
+tasks.register("cleanOldClasses") {
+    group = "openapi tools"
+
     description = 'clean generated files'
     delete "$rootDirToGenerate/src/main/java/com/varb/schedule/buisness/logic/controllers/api"
     delete "$rootDirToGenerate/src/main/java/com/varb/schedule/buisness/models/dto"
 }
-
-generateCode.group = "openapi tools"
