--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -69,17 +69,16 @@ dependencies {
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
 
-    testImplementation('org.springframework.security:spring-security-test')
+    //testImplementation('org.springframework.security:spring-security-test')
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
-        //exclude group: 'junit', module: 'junit'
+        exclude group: 'junit', module: 'junit'
     }
-    testImplementation group: 'org.jsmart', name: 'zerocode-tdd', version: '1.3.9'
     //support openApi codegen annotation
     compileOnly 'io.swagger:swagger-annotations:1.5.22'
     compileOnly 'org.openapitools:jackson-databind-nullable:0.1.0'
 
     testCompile "org.junit.jupiter:junit-jupiter-api:5.3.1"
-    testCompile "org.junit.jupiter:junit-jupiter-params:5.3.1"
+    //testCompile "org.junit.jupiter:junit-jupiter-params:5.3.1"
     testRuntime "org.junit.jupiter:junit-jupiter-engine:5.3.1"
 
     testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.3.1'
